--- a/hackthe6/frontend/src/index.css
+++ b/hackthe6/frontend/src/index.css
@@ -4,7 +4,8 @@
 * {
   margin: 0;
   font-family: 'Quicksand';
-  color: #333;
+  color: #f2f2f2;
+  background-color: #252525;
 }
 .navbar {
   padding: 20px;
@@ -15,48 +16,28 @@
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: #22dfdf;
 }
+
 .navbar .links {
   margin-left: auto;
+  color: #22dfdf;
 }
 .navbar a {
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
+  color: #f2f2f2;
 }
 .navbar a:hover {
-  color: #f1356d;
+  color: #266d83;
 }
 .content {
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
 }
-/* blog previews / list */
-.blog-preview {
-  padding: 10px 16px;
-  margin: 20px 0;
-  border-bottom: 1px solid #fafafa;
-}
-.blog-preview:hover {
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
-}
-.blog-preview h2 {
-  font-size: 20px;
-  color: #f1356d;
-  margin-bottom: 8px;
-}
 
-.blog-preview a {
-  text-decoration: none;
-}
-/* blog details page */
-.blog-details h2 {
-  font-size: 20px;
-  color: #f1356d;
-  margin-bottom: 10px;
-}
-.blog-details div {
-  margin: 20px 0;
+.buttonSearch {
+  background-color: #f2f2f2 !important;
 }
