--- a/hackthe6/frontend/src/index.css
+++ b/hackthe6/frontend/src/index.css
@@ -30,7 +30,7 @@
   color: #f2f2f2;
 }
 .navbar a:hover {
-  color: #266d83;
+  color: #22dfdf;
 }
 .content {
   max-width: 600px;
@@ -42,16 +42,47 @@
   background-color: #f2f2f2 !important;
 }
 
-/* .searchBar {
-  color: white;
-  background-color: white;
-} */
-
-#search{
+#search, #email, #name{
   color: #252525;
   background-color: white;
   border-radius: 10px;
 }
-#search-label{
+#search-label, #email-label, #name-label{
   background-color: white;
 }
+
+h2{
+  color: #B791F6;
+  font-size: 35px;
+  text-align: center;
+
+}
+
+h1{
+  font-size: 46px;
+}
+
+h3{
+  margin-top: 12px;
+}
+
+h4{
+  margin-top: 8px;
+  font-size: 12px;
+  color: #B791F6;
+}
+
+.links{
+  margin-top: 30px;
+}
+
+div.frontPage{
+  height: 100%;
+}
+
+
+
+/* #searchButton, #searchButton-label {
+  color: #B791F6;
+  background-color: white;
+} */
